# chronus-gateway

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  BUILD_PLAN.md  Cargo.toml  Methodology.md  PROJECT_FINALIZATION_PLAN.md  README.md  RUNBOOK.md  TEST_PLAN.md  deny.toml  gateway.example.toml
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml
crates/chronus-hil-sim/: Cargo.toml
crates/chronus-hil-sim/src/: lib.rs  main.rs
crates/chronus-hil-sim/tests/: hil_ingest.rs
crates/chronus-replay/: Cargo.toml
crates/chronus-replay/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/benches/: parse_validate.rs
crates/gateway/src/: ccsds.rs  config.rs  hil_tm.rs  http.rs  ingest.rs  lib.rs  main.rs  metrics.rs  propagator.rs  state.rs  validate.rs
crates/gateway/src/config/: file.rs  mod.rs
crates/gateway/tests/: distribution.rs  ingest.rs
demo/: Dockerfile  README.md  docker-compose.yml  gateway.docker.toml
demo/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/dashboard/src/: main.ts  style.css
demo/openmct/: README.md
demo/replay/: README.md
demo/replay/fixtures/: golden_tm.hex  golden_tm.jsonl
docs/: BUILD_PLAN.md  DEMO.md  Demo_Test.md  EXTENDED_COVALIDATION_PLAN.md  HIL.md  SHOWCASE_PLAN.md  USER_GUIDE.md
logs_72467795679/: 0_test.txt
logs_72467795679/test/: 10_Install cargo-deny.txt  11_cargo deny.txt  1_Set up job.txt  21_Post Checkout Ephemerust (upstream sibling).txt  22_Post Checkout gateway.txt  23_Complete job.txt  2_Checkout gateway.txt  3_Checkout Ephemerust (upstream sibling).txt  4_Install Rust.txt  5_Cargo test.txt  6_Compile benchmarks (Criterion).txt  7_Clippy.txt  8_Install cargo-audit.txt  9_cargo audit.txt  system.txt
