[workspace]
resolver = "2"
members = ["crates/gateway", "crates/chronus-hil-sim"]

# Shared metadata + dependency versions. Member crates opt in with `field.workspace = true`
# (see Methodology.md → "Workspace + centralized dependency versions").
[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["MichaelHansen"]
repository = "https://github.com/IsomorphicAlgo/chronus-gateway"

[workspace.dependencies]
# Async runtime + observability
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / WebSocket (Milestone 5; OD-B)
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }
futures-util = "0.3"
base64 = { version = "0.22", default-features = false, features = ["std"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time + serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CCSDS / ECSS packet standards (Space Packet primary header parsing). See Methodology D-010.
spacepackets = "0.17"

# HIL / Milestone 7 — discrete-event spacecraft driver (asynchronics/NeXosim).
nexosim = "1"

# Astrodynamics backend — sibling checkout (SGP4 look-angles + range-rate for the
# Physics-Telemetry Co-Validation engine). Path is relative to this workspace root.
ephemerust = { path = "../Ephemerust" }
