[package]
name = "chronus-replay"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UDP replay of synthetic CCSDS TM datagrams from hex or JSONL (Showcase S3)"
# Defensive: keep any mistaken `demo/` or `showcase/` trees out of the published tarball (`Methodology.md` D-025).
exclude = ["demo", "showcase"]

[[bin]]
name = "chronus-replay"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time", "fs"] }
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
