[package]
name = "chronus-gateway"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ChronusGateway-RS: an asynchronous, physics-validated TMTC ground-station gateway in Rust"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ephemerust.workspace = true
