[package]
name = "chronus-gateway"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ChronusGateway-RS: an asynchronous, physics-validated TMTC ground-station gateway in Rust"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
spacepackets.workspace = true
ephemerust.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"

[[bench]]
name = "parse_validate"
harness = false
